Replace IOUtils#toString